--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
     <link rel="shortcut icon" href="/img/favicon.png" type="image/png" />
     <link rel="icon" href="/img/favicon.png" type="image/png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+SC&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -16,22 +22,27 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dolceria Fatur</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="return-top-button"><i class="fa-solid fa-angle-up"></i></div>
     <nav>
       <div class="nav-container">
-        <span class="events">Eventi</span>
+        <span class="events"> <a href="eventi.html">Eventi</a></span>
         <ul>
           <li>
-            <a href="#"><i class="fa-solid fa-envelope"></i></a>
+            <a href="mailto:"><i class="fa-solid fa-envelope"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.facebook.com/faturdolceriacisano"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/dolceria.fatur/"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
           </li>
         </ul>
       </div>
@@ -106,122 +117,223 @@
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/2.jpeg" alt="" />
+            <img src="/img/13.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/1.jpeg" alt="" class="lebron" />
+            <img src="/img/14.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/3.jpeg" alt="" />
+            <img src="/img/15.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/4.jpeg" alt="" />
+            <img src="/img/16.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/6.jpeg" alt="" />
+            <img src="/img/17.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/7.jpeg" alt="" class="lebron" />
+            <img src="/img/18.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/8.jpeg" alt="" />
+            <img src="/img/19.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/5.jpeg" alt="" />
+            <img src="/img/20.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/9.jpeg" alt="" />
+            <img src="/img/21.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/10.jpeg" alt="" class="lebron" />
+            <img src="/img/22.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/11.jpeg" alt="" />
+            <img src="/img/23.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/12.jpeg" alt="" />
+            <img src="/img/24.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/2.jpeg" alt="" />
+            <img src="/img/25.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/1.jpeg" alt="" class="lebron" />
+            <img src="/img/26.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/3.jpeg" alt="" />
+            <img src="/img/27.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/4.jpeg" alt="" />
+            <img src="/img/28.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/6.jpeg" alt="" />
+            <img src="/img/29.jpeg" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/31.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/7.jpeg" alt="" class="lebron" />
+            <img src="/img/32.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/8.jpeg" alt="" />
+            <img src="/img/34.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/5.jpeg" alt="" />
+            <img src="/img/35.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/9.jpeg" alt="" />
+            <img src="/img/36.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/10.jpeg" alt="" class="lebron" />
+            <img src="/img/37.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/11.jpeg" alt="" />
+            <img src="/img/38.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/12.jpeg" alt="" />
+            <img src="/img/39.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/40.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/41.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/42.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/43.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/44.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/45.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/46.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/47.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/48.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/49.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/50.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/51.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/52.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/53.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/54.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/55.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/56.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/57.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/58.jpeg" alt="" />
           </div>
         </div>
       </div>
@@ -232,7 +344,18 @@
         <h1>Dolceria Fatur</h1>
         <span>Via Roma n.2 - 24034 Cisano Bergamasco (BG)</span>
         <span>Tel. 0354364090</span>
-        <span>Orari: LUN-VEN 08:00-13:00 14:30-18:00</span>
+        <div class="footer-icons">
+          <a href="https://www.instagram.com/dolceria.fatur/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://www.facebook.com/faturdolceriacisano"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.google.com/maps/place/Dolceria+Fatur/@45.7400269,9.4776355,17z/data=!3m1!4b1!4m5!3m4!1s0x4786abf5ea55482d:0x567d5fcd4dffa31a!8m2!3d45.7400232!4d9.4798242"
+            ><i class="fa-solid fa-map-location-dot"></i
+          ></a>
+        </div>
       </div>
     </footer>
 
