--- a/eventi.html
+++ b/eventi.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- favicon png -->
 
-    <link rel="shortcut icon" href="/img/favicon.png" type="image/png" />
-    <link rel="icon" href="/img/favicon.png" type="image/png" />
+    <link
+      rel="shortcut icon"
+      href="/img/eventi/e1.JPGfavicon.png"
+      type="image/png"
+    />
+    <link rel="icon" href="/img/eventi/e1.JPGfavicon.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,12 +26,337 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Eventi</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="index.html"><h1 class="title">work in progress...</h1></a>
-    <h2 class="events">pagina eventi</h2>
+    <div class="active-img"></div>
+
+    <div class="return-top-button"><i class="fa-solid fa-angle-up"></i></div>
+    <nav>
+      <div class="nav-container">
+        <span class="events"> <a href="index.html">Home</a></span>
+        <ul>
+          <li>
+            <a href="mailto:"><i class="fa-solid fa-envelope"></i></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/faturdolceriacisano"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/dolceria.fatur/"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <main>
+      <div class="intro-section">
+        <div class="intro">
+          <h1 class="title">Eventi</h1>
+          <h2 class="subtitle">Dolceria Fatur</h2>
+        </div>
+      </div>
+      <div class="grid-images">
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e1.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e2.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e3.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e4.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e5.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e7.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e8.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e10.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e11.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e12.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e13.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e14.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e15.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e16.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e17.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e18.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e19.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e20.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e21.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e22.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e23.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e24.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e25.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e26.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e27.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e28.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e29.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e30.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e31.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e32.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e33.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e34.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e35.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e36.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e37.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e38.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e39.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e40.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e41.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e42.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e43.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e44.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e45.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e46.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e47.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e56.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e48.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e49.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e50.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e52.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e53.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e54.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e55.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e57.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e58.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/e59.JPG" alt="" />
+          </div>
+        </div>
+      </div>
+    </main>
+
     <footer>
       <div class="footer-container">
         <h1>Dolceria Fatur</h1>
