--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="active-img"></div>
     <div class="return-top-button"><i class="fa-solid fa-angle-up"></i></div>
     <nav>
       <div class="nav-container">
@@ -108,6 +109,11 @@
         <div class="card">
           <div class="card-image">
             <img src="/img/11.jpeg" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/56.jpeg" alt="" />
           </div>
         </div>
         <div class="card">
@@ -321,11 +327,7 @@
             <img src="/img/55.jpeg" alt="" />
           </div>
         </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/56.jpeg" alt="" />
-          </div>
-        </div>
+
         <div class="card">
           <div class="card-image">
             <img src="/img/57.jpeg" alt="" />
