--- a/eventi.html
+++ b/eventi.html
@@ -26,7 +26,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eventi</title>
+    <title>Eventi e Catering</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
