--- a/eventi.html
+++ b/eventi.html
@@ -26,7 +26,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eventi e Catering</title>
+    <title>Eventi</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -56,7 +56,7 @@
     <main>
       <div class="intro-section">
         <div class="intro">
-          <h1 class="title">Eventi</h1>
+          <h1 class="title">Eventi e Catering</h1>
           <h2 class="subtitle">Dolceria Fatur</h2>
         </div>
       </div>
