--- a/eventi.html
+++ b/eventi.html
@@ -35,7 +35,7 @@
     <div class="return-top-button"><i class="fa-solid fa-angle-up"></i></div>
     <nav>
       <div class="nav-container">
-        <span class="events"> <a href="index.html">Home</a></span>
+        <span class="events"> <a href="index.html"></a></span>
         <ul>
           <li>
             <a href="mailto:"><i class="fa-solid fa-envelope"></i></a>
@@ -57,7 +57,9 @@
       <div class="intro-section">
         <div class="intro">
           <h1 class="title">Eventi e Catering</h1>
-          <h2 class="subtitle">Dolceria Fatur</h2>
+          <h2 class="subtitle">
+            Per informazioni e preventivi scrivere al numero: 0354364
+          </h2>
         </div>
       </div>
       <div class="grid-images">
@@ -106,11 +108,6 @@
         <div class="card">
           <div class="card-image">
             <img src="/img/eventi/e11.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e12.JPG" alt="" />
           </div>
         </div>
 
@@ -229,17 +226,6 @@
             <img src="/img/eventi/e34.JPG" alt="" />
           </div>
         </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e35.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e36.JPG" alt="" />
-          </div>
-        </div>
-
         <div class="card">
           <div class="card-image">
             <img src="/img/eventi/e37.JPG" alt="" />
