--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <div class="return-top-button"><i class="fa-solid fa-angle-up"></i></div>
     <nav>
       <div class="nav-container">
-        <span class="events"> <a href="eventi.html">Eventi</a></span>
+        <span class="events">
+          <a href="eventi.html" target=”_blank" >Eventi</a></span
+        >
         <ul>
           <li>
             <a href="mailto:"><i class="fa-solid fa-envelope"></i></a>
@@ -340,6 +342,14 @@
         </div>
       </div>
     </main>
+
+      <iframe
+      width="0"
+      height="0"
+      src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&hide_artwork=1&autoplay=1&feed=%2FJoshLasden%2Fpop-up-aperitivo-bar-2016-opening-14072016-gentse-feesten-part-1-josh-lasden%2F"
+      frameborder="0"
+      allow="autoplay"
+    ></iframe>
 
     <footer>
       <div class="footer-container">
