--- a/eventi.html
+++ b/eventi.html
@@ -38,15 +38,19 @@
         <span class="events"> <a href="index.html"></a></span>
         <ul>
           <li>
-            <a href="mailto:"><i class="fa-solid fa-envelope"></i></a>
+            <a href="mailto:dolceriafatur@gmail.com"
+              ><i class="fa-solid fa-envelope"></i
+            ></a>
           </li>
           <li>
-            <a href="https://www.facebook.com/faturdolceriacisano"
+            <a
+              href="https://www.facebook.com/faturdolceriacisano"
+              target="_blank"
               ><i class="fa-brands fa-facebook"></i
             ></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/dolceria.fatur/"
+            <a href="https://www.instagram.com/dolceria.fatur/" target="_blank"
               ><i class="fa-brands fa-instagram"></i
             ></a>
           </li>
@@ -56,9 +60,23 @@
     <main>
       <div class="intro-section">
         <div class="intro">
-          <h1 class="title">Eventi e Catering</h1>
+          <h1 class="title">Eventi e Catering, Feste e Coffe Break</h1>
           <h2 class="subtitle">
-            Per informazioni e preventivi scrivere al numero: 0354364
+            Per informazioni e preventivi: <br />
+            <a href="mailto:dolceriafatur@gmail.com">
+              <i class="fa-solid fa-envelope icon"></i
+            ></a>
+            <a href="mailto:dolceriafatur@gmail.com">
+              dolceriafatur@gmail.com</a
+            >
+            <br />
+
+            <i class="fa-solid fa-phone icon"></i>
+            <a>035.4364090</a>
+            <br />
+            <i class="fa-brands fa-whatsapp icon"></i>
+            <a> 3311973552</a>
+            <br />
           </h2>
         </div>
       </div>
@@ -343,20 +361,25 @@
       </div>
     </main>
 
+    <audio controls autoplay loop playsinline>
+      <source src="music.mp3" type="audio/mp3" />
+    </audio>
+
     <footer>
       <div class="footer-container">
         <h1>Dolceria Fatur</h1>
         <span>Via Roma n.2 - 24034 Cisano Bergamasco (BG)</span>
         <span>Tel. 0354364090</span>
         <div class="footer-icons">
-          <a href="https://www.instagram.com/dolceria.fatur/"
+          <a href="https://www.instagram.com/dolceria.fatur/" target="_blank"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://www.facebook.com/faturdolceriacisano"
+          <a href="https://www.facebook.com/faturdolceriacisano" target="_blank"
             ><i class="fa-brands fa-facebook"></i
           ></a>
           <a
             href="https://www.google.com/maps/place/Dolceria+Fatur/@45.7400269,9.4776355,17z/data=!3m1!4b1!4m5!3m4!1s0x4786abf5ea55482d:0x567d5fcd4dffa31a!8m2!3d45.7400232!4d9.4798242"
+            target="_blank"
             ><i class="fa-solid fa-map-location-dot"></i
           ></a>
         </div>
