--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         >
         <ul>
           <li>
-            <a href="mailto:"><i class="fa-solid fa-envelope"></i></a>
+            <a href="mailto:dolceriafatur@gmail.com"><i class="fa-solid fa-envelope"></i></a>
           </li>
           <li>
             <a href="https://www.facebook.com/faturdolceriacisano"
@@ -343,13 +343,9 @@
       </div>
     </main>
 
-      <iframe
-      width="0"
-      height="0"
-      src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&hide_artwork=1&autoplay=1&feed=%2FJoshLasden%2Fpop-up-aperitivo-bar-2016-opening-14072016-gentse-feesten-part-1-josh-lasden%2F"
-      frameborder="0"
-      allow="autoplay"
-    ></iframe>
+
+    
+
 
     <footer>
       <div class="footer-container">
